--- a/Vererbung, Polymorphie_Ausarbeitung.tex
+++ b/Vererbung, Polymorphie_Ausarbeitung.tex
@@ -3,6 +3,8 @@
 \usepackage[a4paper,margin=2.5cm]{geometry}
 \input{packages.tex}
 \usepackage{titling}
+\pagestyle{fancy}
+\fancyhf{}
 
 \setlength{\parindent}{0cm}
 \setcounter{secnumdepth}{5}
