--- a/Vererbung, Polymorphie_Präsentation.tex
+++ b/Vererbung, Polymorphie_Präsentation.tex
@@ -2,15 +2,13 @@
 
 \input{packages.tex}
 
-
-%\setbeamertemplate{footline}{goo \insertframenumber}
-
 \input{macros.tex}
+
 \begin{document}
 
 	\maketitle
 	
-	\input{Präsentation}
+	\input{Präsentation.tex}
 	
 	{\tiny
 	\begin{frame}
