--- a/datenkapselung/Ausarbeitung.tex
+++ b/datenkapselung/Ausarbeitung.tex
@@ -6,11 +6,12 @@
 	\input{datenkapselung/sichtbarkeit/zugriffsmodifikatoren.tex}
 	
 	\subsubsection{Sichtbarkeit 'öffentlich'}
-		Auf öffentliche Eigenschaften und Methoden kann von überall zugegriffen werden.
+		Auf öffentliche Eigenschaften und Methoden kann von überall zugegriffen werden. Methoden sind meist öffentlich.
 		
 	\subsubsection{Sichtbarkeit 'geschützt'}
 		Auf geschützte Eigenschaften und Methoden kann nur innerhalb der eigenen Klasse und von allen davon abgeleiteten Klassen
 		zugegriffen werden. (siehe 2 Vererbung)
-
+		
 	\subsubsection{Sichtbarkeit 'privat'}
-		Auf private Eigenschaften und Methoden kann nur innerhalb der eigenen Klasse zugegriffen werden.
+		Auf private Eigenschaften und Methoden kann nur innerhalb der eigenen Klasse zugegriffen werden. Eigenschaften sind
+		meist privat. Auf private Eigenschaften wird üblicherweise über Getter- und Setter-Methoden zugegriffen.
