--- a/datenkapselung/Präsentation.tex
+++ b/datenkapselung/Präsentation.tex
@@ -1,6 +1,9 @@
 \section{Datenkapselung}
 
+
+{\setbeamertemplate{footline}{\parbox{\linewidth}{\vspace*{-8pt}Quelle: Ausarbeitung von N. M.}}
 \begin{frame}
 	\frametitle{Datenkapselung}
 	{\small\input{datenkapselung/sichtbarkeit/zugriffsmodifikatoren.tex}}
 \end{frame}
+}
