--- a/vererbung/Ausarbeitung.tex
+++ b/vererbung/Ausarbeitung.tex
@@ -51,7 +51,7 @@
 		Mit öffentlicher Vererbung können die Eigenschaften 'x' und 'y' aus der Klasse 'Point2d' für die Klasse 'Point3d'
 		wiederverwendet werden.
 		\UseRawInputEncoding{\lstinputlisting[language={C++}]{vererbung/beispiele/point/src/point3d.public.hpp}}\inputencoding{utf8}
-		Obwohl hier öffenliche Vererbung verwendet wurde, ist es wahrscheinlich nicht sinnvoll diese Klassen vielgestaltig
+		Obwohl hier öffentliche Vererbung verwendet wurde, ist es wahrscheinlich nicht sinnvoll diese Klassen vielgestaltig
 		zu verwenden, da die Aussage ``Ein Punkt im Raum (Point3d) ist ein Punkt auf einer Ebene (Point2d).'' nicht stimmt.
 		
 		\UseRawInputEncoding{\lstinputlisting[language={C++}]{vererbung/beispiele/point/src/point.use.cpp}}\inputencoding{utf8}
@@ -146,3 +146,4 @@
 	\subsection{Endgültige Klassen}
 		Endgültige Klassen sind Klassen, von denen nicht geerbt werden kann.
 		\UseRawInputEncoding{\lstinputlisting[language={Java}]{vererbung/endgueltig/endgueltig.hpp}}\inputencoding{utf8}
+		\UseRawInputEncoding{\lstinputlisting[language={Java}]{vererbung/endgueltig/abgeleitete_klasse.hpp}}\inputencoding{utf8}
