--- a/quellen.tex
+++ b/quellen.tex
@@ -1,24 +1,38 @@
 \begin{itemize}
 	\item FSST-Mitschrift der 2. und 3. Klasse
-	\item \url{https://www.youtube.com/watch?v=7EmboKQH8lM}
+	\item \url{http://lucacardelli.name/Papers/OnUnderstanding.A4.pdf}
 	\item \url{https://www.ics.uci.edu/~jajones/INF102-S18/readings/05_stratchey_1967.pdf}
+	\item \url{https://de.wikipedia.org/wiki/Polymorphie_(Programmierung)}
 	\item \url{https://invidious.snopyta.org/watch?v=7PfNo-FMIf0}
 	\item \url{https://invidious.snopyta.org/watch?v=uTxRF5ag27A}
-	\item \url{https://soundcloud.com/lambda-cast}
-	\item \url{https://de.wikipedia.org/wiki/Polymorphie_(Programmierung)}
-	\item \url{https://lec.inf.ethz.ch/ifmp/2019/slides/lecture14.handout.pdf}
-	\item \url{https://courses.cs.washington.edu/courses/cse331/11wi/lectures/lect06-subtyping.pdf}
-	\item \url{https://de.wikipedia.org/wiki/Vererbung_(Programmierung)}
-	\item \url{https://wiki.haskell.org/Polymorphism}
-	\item \url{http://lucacardelli.name/Papers/OnUnderstanding.A4.pdf}
-	\item C++ Templates: The Complete Guide
 	\item C++: Das umfassende Handbuch
 	\item Grundkurs C++
 	\item C++: Die Sprache der Objekte
 	\item Exceptional C++: 47 engineering puzzles, programming problems, and solutions
 	\item Effektiv C++. 50 Specific Ways to Improve Your Programs and Designs
-	\item \url{https://invidious.snopyta.org/watch?v=HddFGPTAmtU}
-	\item \url{https://www.bfilipek.com/2020/04/variant-virtual-polymorphism.html}
+	
+	\item Ausarbeitung von N. M.
+	
+	\item \url{https://de.wikipedia.org/wiki/Vererbung_(Programmierung)}
+	\item \url{https://en.wikipedia.org/wiki/Multiple_inheritance}
 	\item \url{https://de.wikipedia.org/wiki/Diamond-Problem}
+	
+	\item \url{https://en.wikipedia.org/wiki/Subtyping}
+	\item \url{https://courses.cs.washington.edu/courses/cse331/11wi/lectures/lect06-subtyping.pdf}
+	\item \url{https://lec.inf.ethz.ch/ifmp/2019/slides/lecture14.handout.pdf}
+	\item \url{https://invidious.snopyta.org/watch?v=7EmboKQH8lM}
+	\item \url{https://de.wikipedia.org/wiki/Kreis-Ellipse-Problem}
+	
+	\item \url{https://en.wikipedia.org/wiki/Parametric_polymorphism}
+	\item \url{https://wiki.haskell.org/Polymorphism}
+	\item \url{https://soundcloud.com/lambda-cast}
+	\item C++ Templates: The Complete Guide
+	\item \url{https://invidious.snopyta.org/watch?v=HddFGPTAmtU}
+	
+	\item \url{https://en.wikipedia.org/wiki/Ad_hoc_polymorphism}
+	\item \url{https://de.wikipedia.org/wiki/\%C3\%9Cberladen}
+	\item \url{https://en.wikipedia.org/wiki/Type_conversion}
 	\item \url{https://stackoverflow.com/questions/66983156/is-coercion-static-or-dynamic-polymorphism}
+	
+	\item \url{https://www.bfilipek.com/2020/04/variant-virtual-polymorphism.html}
 \end{itemize}
